package controller;

import entities.Customer;
import entities.Order;
import exceptions.DatabaseException;
import io.javalin.Javalin;
import io.javalin.http.Context;
import persistence.ConnectionPool;
import persistence.SalesMapper;
import persistence.UserMapper;
import utility.PasswordUtil;
import validators.InputValidator;
import java.util.List;

public class UserController {
    public static void addRoutes(Javalin app, ConnectionPool connectionPool) {
        app.get("/createUser", ctx -> ctx.render("createuser.html"));
        app.post("/createUser", ctx -> createUser(ctx, connectionPool));

        app.get("/login", ctx -> ctx.render("login.html"));
        app.post("/login", ctx -> loginUser(ctx, connectionPool));

        app.get("/logout", ctx -> logoutUser(ctx));

        app.get("/profil", ctx -> ctx.render("profil.html"));
        app.post("/profil", ctx -> usersOrder(ctx, connectionPool));
    }


    public static void createUser(Context ctx, ConnectionPool connectionPool){
        //gets userinput
        String email = ctx.formParam("email");
        String password1 = ctx.formParam("password1");
        String password2 = ctx.formParam("password2");
        String address = ctx.formParam("address");
        String role = "kunde";

        //Verifies if phone isnt empty and isnt a number, to prevent NumberFormatException
        String phoneInput = ctx.formParam("phone");
        if(!InputValidator.isItEmpty(phoneInput) && !InputValidator.isNumeric(phoneInput)){
            ctx.attribute("msg", "Telefonnummer skal være et tal");
            ctx.render("createUser.html");
            return;
        }
        int phone = Integer.parseInt(phoneInput);

        //checks on user typed the right password
        String password = "";
        if(password1.equals(password2)){
            //hashes password
            password = PasswordUtil.hashPassword(password1);
            //creates user in DB
            try {
                UserMapper.createUser(email, password, address, phone, role, connectionPool);
                String createConfirm = email+" er nu blevet oprettet som bruger!";
                ctx.attribute("msg", createConfirm);
                //directs the user to the frontpage
                ctx.render("index.html");
            } catch (DatabaseException e) {
                ctx.attribute("msg", e.getMessage());
                ctx.render("createUser.html");
            }
        } else {
            ctx.attribute("msg", "Your passwords do not match. Please try again");
            ctx.render("createUser.html");
        }
    }

    public static void loginUser(Context ctx, ConnectionPool connectionPool){
        // gets data
        String email = ctx.formParam("email");
        String password = ctx.formParam("password");

        //logs user in
        try {
            Customer customer = UserMapper.login(email, password, connectionPool);
            // puts session to the current user
            ctx.sessionAttribute("currentUser", customer);

            //sets currentUserActive to true
            ctx.sessionAttribute("currentUserActive", "true");

            //directs the user to the frontpage
            ctx.redirect("/");
        } catch (DatabaseException e) {
            //if a mistakes happends
            ctx.attribute("msg", e.getMessage());
            //directs the user back to login
            ctx.render("login.html");
        }
    }

    public static void logoutUser(Context ctx){
        // stops session
        ctx.sessionAttribute("currentUser", null);

        ctx.sessionAttribute("currentUserActive", "false");

        // alert when user is successfully logged out
        String logoutConfirm = "Du er nu logget ud";
        ctx.attribute("msg", logoutConfirm);
        ctx.render("index.html");
    }

    public static void usersOrder(Context ctx, ConnectionPool connectionPool){
        //Find user
        Customer customer = ctx.sessionAttribute("currentUser");

        //Get all orders
        List<Order> orders = SalesMapper.showAllOrdersInformation(connectionPool);

        //sort list to find the current users orders
        List<Order> userOrders = orders.stream()
                .filter(o ->
                        o.getCustomer().getId() == customer.getId())
                .toList();
        ctx.attribute("userOrders", userOrders);
        ctx.redirect("/profil");
    }
}
